# AutoDef

./: .gitignore  .gitmodules  LICENSE  README.md  autodef.sublime-workspace  build-model.py  build.sh  compute_tf_jacobian_models.py  convert_keras_models_to_tf.py  installDependencies.sh  keras.json  learn.py  learn_mesh.py  learn_on_pca.py  my_keras_to_tensorflow.py  my_utils.py  overnight.sh  test.json
configs/: 30k-armadillo-waist.json  31k-dragon.json  X.json  armadillo.json  armadillo_low.json  armadillo_med.json  armadillo_very_low.json  cactus.json  dragon.json  elephant.json  fine_beam_handle_modes.json  training_convergence_test.json  twist_2k_bar.json  twisting_bar.json  very-fine-bunny.json  x-config.json
configs/old/: human.json  (+24 more)
generate_training/: CMakeLists.txt
meshes/: 11kdragon.mesh  25_cm_bar_11k_fixed_verts  25cm bar.1.mesh  25cm bar.mtl  25cm_armadillo_.csv  25cm_armadillo_default.mesh  25cm_bar_11k_tets.U  25cm_bar_11k_tets.cub  25cm_bar_11k_tets.veg  25cm_bar_28k_tets.mesh  25cm_bar_2k_tets.mesh  25cm_dino_.csv  25cm_dino_high.mesh  25cm_dino_low.mesh  X_25cm_.csv  X_25cm_high.mesh  X_25cm_low.mesh  bucklingbar.1.mesh  cactus_.csv  cactus_ultra_low.mesh  cactus_very_low.mesh  catapult.mesh  catapult_.csv  catapult_med.mesh  catapult_very_high.mesh  coarsearmadillo.mesh  coarsebunny.1.mesh  dino_.csv  dino_low.mesh  dino_very_low.mesh  dragon_.csv  dragon_ultra_low.mesh  dragon_very_low.mesh  elephant_.csv  elephant_ultra_low.mesh  elephant_very_low.mesh  fineoctopus.mesh  human.mesh  mounted_bar2_.csv  mounted_bar_.csv  (+8 more)
old_stuff/: test  test_tf_gradients.py  throwaway_test.py
reduced_sim_gauss/: CMakeLists.txt
reduced_sim_gauss/configs/: test.json
reduced_sim_gauss/mesh/: Beam.1.edge  Beam.1.ele  Beam.1.face  Beam.1.node  Beam.1.smesh  Beam.ele  Beam.mesh  Beam0.01.mesh  Beam0.02.mesh  Beam0.05.mesh  Beam0.1.mesh  Beam0.2.mesh  Coarse_beam.ele  Coarse_beam.node  Fine_beam.ele  Fine_beam.node
reduced_sim_gauss/mesh/Untitled Folder/: coarsest_beam.mesh  fine_beam.mesh  finest_beam.mesh
reduced_sim_gauss/src/: AutoDefUtils.h  AutoEncoderSpace.cpp  GaussSystemWrapper.h  GaussSystemWrapperImpl.cpp  GaussSystemWrapperImpl.h  LinearSpace.cpp  ReducedSpace.cpp  TypeDefs.h  reduced_sim_example.cpp
scripts/: NonlinearHandleModes.m  NonlinearHandleModes.m_bak  NonlinearHandleModes.m_new  NonlinearHandleModes.m~  analyze_time.py  augment_training_data.py  build-model.py  build_model.py  compare_displacement_per_frame.py  configs.json  generate_energy_models.py  generate_error_heatmap_data.py  generate_vjp.py  mesh_to_veg.py  pathdef.m  pcaCubature.m  pcaCubature.m~  test_tf_forward_jac.py  unified_gen_and_train.py
src/AutoDefRuntime/: CMakeLists.txt
src/AutoDefRuntime/cmake/: FindGauss.cmake  FindMKL.cmake
src/AutoDefRuntime/src/: AutoDefUtils.cpp  AutoDefUtils.h  AutoEncoderSpace.cpp  AutoEncoderSpace.h  LinearSpace.h  ReducedSpace.h  TypeDefs.h  main.cpp
src/cubacode/: .release_time  CMakeLists.txt  README.txt  makefile
src/cubacode/cmake/: FindGauss.cmake
src/cubacode/models/fine_beam_final/: energy_training_history.json  replay.json  tets.mesh
src/cubacode/models/fine_beam_final/energy_model/an08/107_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/10_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/126_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/146_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/174_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/182_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/192_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/200_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/207_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/217_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/229_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/239_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/248_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/262_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/270_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/286_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/293_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/30_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/320_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/326_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/335_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/342_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/357_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/383_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/390_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/425_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/431_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/462_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/49_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/59_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/69_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/87_samples/: details.txt
src/cubacode/models/fine_beam_final/energy_model/an08/97_samples/: details.txt
src/cubacode/src/: GreedyCubop.h  MATRIX3.cpp  MATRIX_DEBUG.cpp  TYPES.h  VEC3.h  VECTOR.h  main.cpp  nnls.cpp  steve.cpp  steve.h
utils/: compute_tf_jacobian_models.py  convert_keras_models_to_tf.py  learn.py  my_keras_to_tensorflow.py  my_utils.py
(+13179 files in other folders)
